# wisegpt

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup_dev.sh
src/wisegpt/: __init__.py  __main__.py  ai_service.py  cli.py  config.py  monitoring.py
